Tercer commit: Funciona la validación en RESERVAS y las CARDS en NUESTROS PROFES; no funciona la validacion de usuario en INGRESO y la creación de la CARD con los datos del formulario en RESERVAS

--- a/sass/Parciales/_reservas.scss
+++ b/sass/Parciales/_reservas.scss
@@ -21,8 +21,17 @@
                     margin:-50px 0px 60px 80px;
                     
                 }
+
     }        
 } 
+
+.ocultar {
+    display: none;
+}
+ 
+.mostrar {
+    display: block;
+}
 
 
 
