--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -25,7 +25,7 @@
                         FOTOS
 -----------------------------------------------------*/
 
-@import"./Parciales/fotos-main";
+@import"./Parciales/fotos-index";
 
 /*----------------------------------------------------
                  NUESTROS PROFES
@@ -45,6 +45,12 @@
 
 @import"./Parciales/reservas";
 
+/*------------------------------
+          RESERVAS JS
+--------------------------------*/
+
+@import"./Parciales/main";
+
 /*----------------------------------------------------
                      CONTACTO
 -----------------------------------------------------*/
@@ -61,7 +67,7 @@
                     FORMULARIO
 -----------------------------------------------------*/
 
-@import"./Parciales/Formulario";
+@import"./Parciales/formulario";
 
 /*----------------------------------------------------
                       FOOTER
