--- a/css/estilos.css
+++ b/css/estilos.css
@@ -635,7 +635,7 @@ main h4 {
                     RESERVAS
 -----------------------------------------------------*/
 .main-reservas {
-  background-color: white;
+  background-color: #73ff66;
 }
 
 .main-reservas section.reservas {
@@ -669,6 +669,44 @@ main h4 {
       -ms-grid-row-align: center;
       align-self: center;
   margin: -50px 0px 60px 80px;
+}
+
+.main-reservas span.input-group-text {
+  margin-top: 6px;
+  width: 10%;
+  height: 10%;
+}
+
+.main-reservas #nuevoUsuario {
+  width: 100%;
+}
+
+/*------------------------------
+          RESERVAS JS
+--------------------------------*/
+container div .containerFormRes {
+  width: 80%;
+  background-color: orange;
+}
+
+.cardFormulario {
+  margin-left: 300px;
+  margin-top: 50px;
+}
+
+.cardFormulario .cardFormRes {
+  background-color: orange;
+}
+
+.cardFormulario .cardFormRes h4 {
+  font-size: 3rem;
+  color: yellow;
+  margin: 10px;
+}
+
+.cardFormulario .cardFormRes .titSecc {
+  color: #b40909;
+  font-size: 1.2rem;
 }
 
 /*----------------------------------------------------
@@ -821,29 +859,25 @@ main .tituloIngreso {
   margin: 30px 10px 10px 200px;
 }
 
-main .contIng {
+main div.contIng {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 900px;
+  width: 100%;
   height: 610px;
   margin-top: -80px;
   margin-bottom: 20px;
   font-family: 'Julius Sans One', sans-serif;
 }
 
-main .contIng .tituloFormulario {
-  background-color: #FEFFED;
+main div.contIng h2.tituloFormulario {
+  background-color: orangered;
   padding: 20px 35px;
   margin: -10px -50px 10px -50px;
   text-align: center;
