--- a/sass/Parciales/_ingresar.scss
+++ b/sass/Parciales/_ingresar.scss
@@ -7,20 +7,18 @@ main{
         text-align: center;
         margin:30px 10px 10px 200px;
     }
-    
-    .contIng{
-        display: flex;
-        flex-direction: column;
+    div.contIng{
+        display:flex;
         justify-content: center;
         align-items: center;
-        width: 900px;
+        width: 100%;
         height: 610px;
         margin-top:-80px ;
         margin-bottom:20px;
         font-family: 'Julius Sans One', sans-serif;
-
-        .tituloFormulario{
-            background-color: #FEFFED;
+    
+        h2.tituloFormulario{
+            background-color: orangered;
             padding: 20px 35px;
             margin: -10px -50px 10px -50px ;
             text-align:center;
@@ -30,6 +28,7 @@ main{
 }
 
 div.formIng{
+    
     width: 300px;
     padding: 10px 50px 25px;
     border: 2px solid gray;
@@ -38,6 +37,7 @@ div.formIng{
     float:left;
     margin-top:50px;
 }
+
 input[type=text],input[type=password]{
     width: 100%;
     height: 40px;
@@ -49,12 +49,14 @@ input[type=text],input[type=password]{
     font-size: 16px;
     border-radius: 5px;
 }
+
 label{
     color: #464646;
     text-shadow: 0 1px 0 #fff;
     font-size: 14px;
     font-weight: bold;
 }
+
 center{
     font-size:32px;
 }
@@ -62,6 +64,7 @@ center{
 .valid{
     color:green;
 }
+
 .back{
     text-decoration: none;
     border: 1px solid rgb(0, 143, 255);
@@ -70,6 +73,7 @@ center{
     border-radius: 2px;
     color: black;
 }
+
 input[type=button]{
     font-size: 16px;
     background: linear-gradient(#ffbc00 5%, #ffdd7f 100%);
@@ -82,6 +86,7 @@ input[type=button]{
     padding: 10px 0;
     outline:none;
 }
+
 input[type=button]:hover{
     background: linear-gradient(#ffdd7f 5%, #ffbc00 100%);
 }
